--- a/templates/home.html
+++ b/templates/home.html
@@ -70,6 +70,7 @@
       </div>
        <h4 class="text-light d-flex justify-content-center" style="font-size:30px">The purpose of this software is to estimate the age of the user</h4>
       <p class="text-light d-flex justify-content-center" style="font-size:24px">[Youth: 15 to 24, Adult: 25 to 59, Senior : from 60 years]</p>
+      <p class="text-light d-flex justify-content-center" style="font-size:24px">Read this slowly:"Artificial Intelligence is the future of Humanity"</p>
 
       <div class="row">
           <div class="col">
